--- a/index.html
+++ b/index.html
@@ -19,31 +19,103 @@
           <div class="input-number">
             <input type="number" id="productivity" name="productivity" min="0" max="10" value="1" required /><br />
             <div class="input-number-actions">
-              <button>
+              <button type="button">
                 <span>+</span>
               </button>
-              <button>
+              <button type="button">
                 <span>-</span>
               </button>
             </div>
           </div>
         </div>
+
         <div class="kualitas inputnilai">
           <label for="quality">Kualitas: (1-10)</label>
-          <input type="number" id="quality" name="quality" min="0" max="10" value="1" required /><br />
+          <div class="input-number">
+            <input type="number" id="quality" name="quality" min="0" max="10" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
         </div>
+
         <div class="disiplin inputnilai">
           <label for="discipline">Disiplin: (1-10)</label>
-          <input type="number" id="discipline" name="discipline" min="0" max="10" value="1" required /><br />
+          <div class="input-number">
+            <input type="number" id="discipline" name="discipline" min="0" max="10" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
         </div>
         <div class="inisiatif inputnilai">
           <label for="initiative">Inisiatif: (1-10)</label>
-          <input type="number" id="initiative" name="initiative" min="0" max="10" value="1" required /><br />
+          <div class="input-number">
+            <input type="number" id="initiative" name="initiative" min="0" max="10" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
         </div>
         <div class="button">
           <button type="submit">Evaluate</button>
         </div>
       </form>
     </section>
+    <section>
+      <h1>Daftar Karyawan</h1>
+      <table>
+        <tr>
+          <th>Nama</th>
+          <th>Produktivitas</th>
+          <th>Kualitas</th>
+          <th>Disiplin</th>
+          <th>Inisiatif</th>
+          <th>Predikat</th>
+          <th>Score</td>
+        </tr>
+        <tr>
+          <td>Adriano Posumah</td>
+          <td>10</td>
+          <td>10</td>
+          <td>10</td>
+          <td>10</td>
+          <td>Baik</td>
+          <td>30.0000</td>
+        </tr>
+      </table>
+    </section>
+    <script>
+      document.querySelectorAll(".input-number").forEach(function (inputNumberElement) {
+        const inputNumber = inputNumberElement.querySelector("input");
+        const plusButton = inputNumberElement.querySelector(".input-number-actions button:first-child");
+        const minusButton = inputNumberElement.querySelector(".input-number-actions button:last-child");
+
+        plusButton.addEventListener("click", function (event) {
+          event.preventDefault();
+          inputNumber.stepUp();
+        });
+
+        minusButton.addEventListener("click", function (event) {
+          event.preventDefault();
+          inputNumber.stepDown();
+        });
+      });
+    </script>
   </body>
 </html>
