--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- A -->
         <h3>Spesifik Manajemen :</h3>
         <div class="produktivitas inputnilai">
-          <label for="A1">Leadership & Responsibility: (1-4)</label>
+          <label for="A1">Kepemimpinan & Tanggung Jawab: (1-4)</label>
           <div class="input-number">
             <input type="number" id="A1" name="A1" min="1" max="4" value="1" required /><br />
             <div class="input-number-actions">
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="kualitas inputnilai">
-          <label for="A2">Planning and Organization: (1-3)</label>
+          <label for="A2">Perencanaan dan Organisasi: (1-3)</label>
           <div class="input-number">
             <input type="number" id="A2" name="A2" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="disiplin inputnilai">
-          <label for="A3">Integrated Solutions: (1-4)</label>
+          <label for="A3">Solusi Terpadu: (1-4)</label>
           <div class="input-number">
             <input type="number" id="A3" name="A3" min="1" max="4" value="1" required /><br />
             <div class="input-number-actions">
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="inisiatif inputnilai">
-          <label for="A4">Supervisory Skills: (1-4)</label>
+          <label for="A4">Keterampilan Supervisi: (1-4)</label>
           <div class="input-number">
             <input type="number" id="A4" name="A4" min="1" max="4" value="1" required /><br />
             <div class="input-number-actions">
@@ -75,7 +75,7 @@
         <!-- B -->
         <h3>Spesifik Pekerjaan :</h3>
         <div class="produktivitas inputnilai">
-          <label for="B1">Strategic Analytical Thinking: (1-3)</label>
+          <label for="B1">Pemikiran Analitis Strategis: (1-3)</label>
           <div class="input-number">
             <input type="number" id="B1" name="B1" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="kualitas inputnilai">
-          <label for="B2">Creative Process & Solutions: (1-5)</label>
+          <label for="B2">Proses dan Solusi Kreatif: (1-5)</label>
           <div class="input-number">
             <input type="number" id="B2" name="B2" min="1" max="5" value="1" required /><br />
             <div class="input-number-actions">
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="disiplin inputnilai">
-          <label for="B3">Design Skills: (1-5)</label>
+          <label for="B3">Keterampilan Desain: (1-5)</label>
           <div class="input-number">
             <input type="number" id="B3" name="B3" min="1" max="5" value="1" required /><br />
             <div class="input-number-actions">
@@ -117,7 +117,7 @@
           </div>
         </div>
         <div class="inisiatif inputnilai">
-          <label for="B4">Presentation (Written vs Verbal): (1-3)</label>
+          <label for="B4">Presentasi (Tertulis vs Lisan) (1-3)</label>
           <div class="input-number">
             <input type="number" id="B4" name="B4" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="inisiatif inputnilai">
-          <label for="B5">Selling & Persuasion: (1-3)</label>
+          <label for="B5">Menjual & Mempersuasi: (1-3)</label>
           <div class="input-number">
             <input type="number" id="B5" name="B5" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div class="inisiatif inputnilai">
-          <label for="B6">Project Complexity: (1-5)</label>
+          <label for="B6">Kompleksitas Proyek: (1-5)</label>
           <div class="input-number">
             <input type="number" id="B6" name="B6" min="1" max="5" value="1" required /><br />
             <div class="input-number-actions">
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="inisiatif inputnilai">
-          <label for="B7">Project Versatility: (1-5)</label>
+          <label for="B7">Versatilitas Proyek: (1-5)</label>
           <div class="input-number">
             <input type="number" id="B7" name="B7" min="1" max="5" value="1" required /><br />
             <div class="input-number-actions">
@@ -173,7 +173,7 @@
           </div>
         </div>
         <div class="inisiatif inputnilai">
-          <label for="B8">Resourcefulness: (1-5)</label>
+          <label for="B8">Kecerdikan: (1-5)</label>
           <div class="input-number">
             <input type="number" id="B8" name="B8" min="1" max="5" value="1" required /><br />
             <div class="input-number-actions">
@@ -189,7 +189,7 @@
         <!-- C -->
         <h3>Kepribadian :</h3>
         <div class="produktivitas inputnilai">
-          <label for="C1">Work Standards: (1-4)</label>
+          <label for="C1">Standar Kerja: (1-4)</label>
           <div class="input-number">
             <input type="number" id="C1" name="C1" min="1" max="4" value="1" required /><br />
             <div class="input-number-actions">
@@ -203,7 +203,7 @@
           </div>
         </div>
         <div class="kualitas inputnilai">
-          <label for="C2">Motivations and Enthusiasm: (1-3)</label>
+          <label for="C2">Motivasi dan Antusiasme: (1-3)</label>
           <div class="input-number">
             <input type="number" id="C2" name="C2" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
@@ -217,7 +217,7 @@
           </div>
         </div>
         <div class="disiplin inputnilai">
-          <label for="C3">Contribution and Opinion: (1-3)</label>
+          <label for="C3">Kontribusi dan Pendapat: (1-3)</label>
           <div class="input-number">
             <input type="number" id="C3" name="C3" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
@@ -231,7 +231,7 @@
           </div>
         </div>
         <div class="inisiatif inputnilai">
-          <label for="C4">Discipline / Attendance: (1-3)</label>
+          <label for="C4">Disiplin / Kehadiran: (1-3)</label>
           <div class="input-number">
             <input type="number" id="C4" name="C4" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
